--- a/.github/workflows/test_build_linux.yml
+++ b/.github/workflows/test_build_linux.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-linux:
     strategy:
-      fail-fast: ${{ github.event.inputs.fail_fast }}
+      fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
         os: [ubuntu-18.04, ubuntu-20.04, ubuntu-22.04]
         architecture: [arm64, amd64]
