--- a/.github/workflows/test_build_mac.yml
+++ b/.github/workflows/test_build_mac.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-mac:
     strategy:
-      fail-fast: ${{ github.event.inputs.fail_fast }}
+      fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
         os: [macos-11, macos-12]
         architecture: [osx64]
