--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -14,7 +14,7 @@ on:
 jobs:
   build-windows:
     strategy:
-      fail-fast: ${{ github.event.inputs.fail_fast }}
+      fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
         os: [windows-2019]
         architecture: [win64]
