--- a/.github/workflows/test_build_windows.yml
+++ b/.github/workflows/test_build_windows.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
-        os: [windows-2022]
+        os: [windows-2019, windows-2022]
         architecture: [win64]
         build-type: [Release, Debug]
 
@@ -26,7 +26,7 @@ jobs:
         run: docker rmi $(docker images -q -a)
         shell: powershell
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
