--- a/.github/workflows/build_docker_linux.yml
+++ b/.github/workflows/build_docker_linux.yml
@@ -17,13 +17,13 @@ jobs:
     strategy:
       fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
-        os: [ubuntu-20.04]
-        architecture: [amd64]
-        build-type: [Release]
+        os: [ubuntu-20.04, ubuntu-22.04]
+        architecture: [amd64, arm64]
+        build-type: [Release, Debug]
 
     runs-on: ubuntu-22.04
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -50,6 +50,7 @@ jobs:
 
       - name: Create and run Docker Image
         working-directory: ./docker/${{ matrix.os }}
-        run: ./run.sh
+        run: |
+          docker buildx build -t webrtc --build-arg BUILD_TYPE=${{ matrix.build-type }} --build-arg BUILD_ARCHITECTURE=${{ matrix.architecture }} --build-arg BUILD_BRANCH=update-webrtc .
         shell: bash
 
