--- a/.github/workflows/build_docker_linux.yml
+++ b/.github/workflows/build_docker_linux.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: ${{ github.event.inputs.fail_fast != 'false'}}
       matrix:
         os: [ubuntu-20.04, ubuntu-22.04]
-        architecture: [amd64]
+        architecture: [arm64, amd64]
         build-type: [Release, Debug]
 
     runs-on: ubuntu-22.04
