--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -110,11 +110,17 @@ jobs:
           sudo apt-get install ninja-build cmake build-essential libssl-dev libboost-all-dev
           sudo apt-get install libglib2.0-dev libgtk-3-dev libpulse-dev libasound2-dev
 
-      - name: Install cross compilation dependencies
+      - name: Install cross compilation dependencies (default GCC)
         run: |
           sudo apt-get install g++-aarch64-linux-gnu gcc-aarch64-linux-gnu
           sudo apt-get install gcc-arm-linux-gnueabihf g++-arm-linux-gnueabihf
-        if: matrix.architecture == 'arm64'
+        if: matrix.architecture == 'arm64' && matrix.os != 'ubuntu-20.04'
+
+      - name: Install cross compilation dependencies (GCC 10)
+        run: |
+          sudo apt-get install g++-10-aarch64-linux-gnu gcc-10-aarch64-linux-gnu
+          sudo apt-get install gcc-10-arm-linux-gnueabihf g++-10-arm-linux-gnueabihf
+        if: matrix.architecture == 'arm64' && matrix.os == 'ubuntu-20.04'
 
       - name: Create build directory
         working-directory: .
