--- a/3rdParty/webrtc_native/CMakeLists.txt
+++ b/3rdParty/webrtc_native/CMakeLists.txt
@@ -1,5 +1,5 @@
-# WEBRTC_SEMANTIC_VERSION=120.6099.1.1
-set(WEBRTC_CHECKOUT b0cc68e61205fd11a7256a6e85307ec17ad95790)
+# VERSION MAJOR = 119, MINOR=0, BUILD=6045, PATCH=215
+set(WEBRTC_CHECKOUT 52bc9f7c1205f4b731ea0289b059f7d240c1e228)
 
 if(WIN32)
 
